# Simple-Aircraft-Simulator

./: CMakeLists.txt  README.md  appveyor.yml  build.bat
CMake/: FindBoost.cmake  FindCatch2.cmake  FindRapidXML.cmake
docs/: dynamic_simulation_of_aircraft.md
include/data.utilities/: lookup_table_1d.h  lookup_table_2d.h
include/interpolate/: linear_lookup.h  lookup1d.h  lookup2d.h  lookup_table_1d.h  lookup_table_2d.h
src/: CMakeLists.txt
src/data.utilities/: CMakeLists.txt  bilinear_interpolation.cpp  bilinear_interpolation.h  linear_interpolation.cpp  linear_interpolation.h  lookup_table_1d.cpp  lookup_table_2d.cpp  nearest_neighbour2d.cpp  nearest_neighbour2d.h  xml_lookup_table_1d_reading.cpp  xml_lookup_table_1d_reading.h  xml_lookup_table_2d_reading.cpp  xml_lookup_table_2d_reading.h
src/data.utilities.test/: CMakeLists.txt  bilinearInterpExample.xlsx  bilinear_interpolation.test.cpp  linear_interpolation.test.cpp  linear_lookup.test.cpp  nearest_neighbour2d.test.cpp
src/interpolate/: CMakeLists.txt  bilinear_interpolation.cpp  bilinear_interpolation.h  bilinear_lookup.cpp  bilinear_lookup.h  data_table_2d.cpp  data_table_2d.h  linear_interpolation.cpp  linear_interpolation.h  linear_lookup.cpp  linear_lookup.h  lookup_table_1d.cpp  lookup_table_2d.cpp  nearest_neighbour2d.cpp  nearest_neighbour2d.h  xml_lookup_reading.cpp  xml_lookup_reading.h  xml_lookup_table_1d_reading.cpp  xml_lookup_table_1d_reading.h  xml_lookup_table_2d_reading.cpp  xml_lookup_table_2d_reading.h
src/interpolate_test/: CMakeLists.txt  bilinearInterpExample.xlsx  bilinear_interpolation.test.cpp  bilinear_lookup.test.cpp  linear_interpolation.test.cpp  linear_lookup.test.cpp  nearest_neighbour2d.test.cpp  test1d.xml  test2d.xml
